<resources>
    <string name="app_name">SqliteDatabase_in_AndroidStudio</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name"> Name</string>
    <string name="email">  Email</string>
    <string name="password">" Password"</string>
    <string name="todo">TODO</string>
    <string name="log_out">Log out</string>
    <string name="gender">Gender:</string>
    <string name="email_">Email:</string>
    <string name="name_">Name:</string>
    <string name="update">Update</string>
    <string name="male">male</string>
</resources>