<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Edite Details"
        app:titleTextColor="@color/white"
        android:background="#3F51B5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:gravity="start">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/email_"
               android:textSize="20sp"
               android:textStyle="bold"
               android:textColor="@color/black"
               />
           <TextView
               android:id="@+id/userEmailNotEditable"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="rajkishorbgp6@gmail.com"
               android:textSize="18sp"
               android:textStyle="bold"
               android:textColor="#3C3B3B"
               />
       </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <EditText
                android:id="@+id/editName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Raj Kishor"
                android:textSize="25sp"
                android:ems="6"
                android:textColor="@color/black"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:gravity="start">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <EditText
                android:id="@+id/editGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:ems="5"
                android:layout_marginStart="5dp"
                android:textSize="25sp"
                android:textColor="@color/black"
                />
        </LinearLayout>

        <Button
            android:id="@+id/updateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="200dp"/>

    </LinearLayout>

</LinearLayout>