<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    android:padding="20sp"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/reg_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:drawableStart="@drawable/baseline_person_24"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/reg_userEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:drawableStart="@drawable/baseline_email_24"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColorHint="@color/black"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/reg_userPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:drawableStart="@drawable/baseline_lock_24"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/reg_userGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:singleLine="true"
        android:hint="Gender"
        android:textColorHint="@color/black"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:text="Register"
        android:onClick="registerUser"/>
</LinearLayout>